--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,7 +32,12 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/preparation, roles: ROLE_PREP }
         - { path: ^/compte, roles: ROLE_USER }
+
+    role_hierarchy:
+            ROLE_ADMIN:       [ROLE_USER, ROLE_PREP]
+            
 
 when@test:
     security:
