--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap": "^5.3.2"
+        "bootstrap": "^5.3.2",
+        "jspdf": "^2.5.1",
+        "tarteaucitronjs": "^1.17.0"
     }
 }
