--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=aad93fbcf13f60914464a824fa820c2e
 ###< symfony/framework-bundle ###
 
@@ -26,7 +26,7 @@ APP_SECRET=aad93fbcf13f60914464a824fa820c2e
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://flavien:0134@127.0.0.1:3306/LesBrunchsdeBobetTintin"
+DATABASE_URL="mysql://greta:Greta1234!@127.0.0.1:3306/LesBrunchsdeBobetTintin?serverVersion=8.0.32&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
